# acc

./: .gitignore  LICENSE  README.md  pyproject.toml  verify_startup.py
Formula/: acc.rb  ccc.rb
homebrew-acc/Formula/: acc.rb
src/acc/: __init__.py  __main__.py  agents.py  app.py  columns.py  config.py  discovery.py  notifications.py  spawner.py  status.py  summarizer.py
src/acc/links/: __init__.py  base.py  custom.py  generic.py  github.py  linear.py  localhost.py
src/acc/scripts/: afm_wrapper.swift
src/acc/widgets/: __init__.py  detail_panel.py  grid.py  header.py  session_table.py
src/ccc/: __main__.py  app.py  columns.py  config.py  discovery.py  notifications.py  spawner.py  status.py  summarizer.py
src/ccc/links/: __init__.py  custom.py  generic.py  github.py  linear.py  localhost.py
src/ccc/widgets/: __init__.py  detail_panel.py  header.py  session_table.py
tests/: test_config.py  test_custom_config.py  test_links.py  test_links_dedup.py  test_llm_config.py  test_status.py  test_summarizer.py  test_summarizer_providers.py
