[project]
name = "claude-command-center"
version = "0.1.2"
description = "A TUI to monitor and manage coding agent sessions (Claude, OpenCode, Codex, Aider, Gemini) running in tmux"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.89",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.scripts]
ccc = "ccc.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
